# moccasin

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENCE  LICENCE-APACHE  README.md  RUN_TESTS.md  STYLE_GUIDE.md  TESTING_GUIDE.md  all_moccasin_toml_parameters.html  class_reference.html  cli_commands.html  common_errors.html  explorer_network_defaults.html  funding.json  genindex.html  index.html  installing_moccasin.html  justfile  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  toctree.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: docs-release.yml  mypy-check.yml  pypi-release.yml  typecheck-and-formatting.yml
_sources/: all_moccasin_toml_parameters.rst.txt  class_reference.rst.txt  cli_commands.rst.txt  common_errors.rst.txt  explorer_network_defaults.rst.txt  index.rst.txt  installing_moccasin.rst.txt  quickstart.rst.txt  toctree.rst.txt
_sources/api_reference/: config_reference.rst.txt  named_contract_reference.rst.txt  network_reference.rst.txt
_sources/cli_reference/: compile.rst.txt  config.rst.txt  console.rst.txt  init.rst.txt  install.rst.txt  purge.rst.txt  run.rst.txt  wallet.rst.txt
_sources/core_concepts/: dependencies.rst.txt  deployments.rst.txt  named_contracts.rst.txt  networks.rst.txt  project.rst.txt  script.rst.txt  testing.rst.txt  wallet.rst.txt
_sources/how-tos/: code_formatting.rst.txt  compiler_args_to_cli.rst.txt  metamask_deployment.rst.txt  stateful_fuzzing.rst.txt  verify_contracts.rst.txt  vyper_subcommand.rst.txt
_sources/tutorials/: zksync-getting-started.rst.txt
api_reference/: config_reference.html  moccasin_account_reference.html  named_contract_reference.html  network_reference.html  networks_reference.html
cli_reference/: compile.html  config.html  console.html  deploy.html  deployments.html  explorer.html  init.html  inspect.html  install.html  purge.html  run.html  test.html  wallet.html
core_concepts/: dependencies.html  deployments.html  moccasin_toml.html  named_contracts.html  networks.html  project.html  script.html  testing.html  wallet.html
core_concepts/dependencies/: purging.html  virtual_environments.html
core_concepts/named_contracts/: manifest_contract.html  manifest_named.html
core_concepts/networks/: eravm.html  forked_networks.html  pyevm.html
core_concepts/scripting/: console.html  deploy.html
core_concepts/testing/: coverage.html  fixtures.html  fuzzing.html  gas_profiling.html  pranking.html  staging_markers.html  titanoboa_testing.html
core_concepts/wallet/: config_keys.html  private_key.html
docs/source/: _generate_vars.py  all_gaboon_toml_parameters.rst  all_moccasin_toml_parameters.rst  basic-tutorial.rst  cli.rst  cli_commands.rst  coming_soon.rst  common-errors.rst  common_errors.rst  conf.py  config_keys.rst  console.rst  coverage.rst  custom.css  dependencies.rst  deploy.rst  fixtures.rst  forked-networks.rst  gaboon_toml.rst  gaboon_wrapper_for_docs.py  gas_profiling.rst  index.rst  installing-gaboon.rst  installing-moccasin.rst  installing_moccasin.rst  layout.rst  manifest_contract.rst  moccasin_toml.rst  moccasin_wrapper_for_docs.py  named_contracts.rst  networks.rst  project.rst  pyevm.rst  quickstart.rst  script.rst  testing.rst  titanoboa_testing.rst  toctree.rst  virtual_environments.rst  wallet.rst
gaboon/: __init__.py  __main__.py  _add_sys_path.py  _dependency_helpers.py  _sys_path_and_config_setup.py  boa_tools.py  config.py  constants.py  gaboon_account.py  logging.py
gaboon/cli/: __main__.py  compile.py  init.py
gaboon/commands/: compile.py  config_.py  console.py  init.py  install.py  purge.py  run.py  test.py  wallet.py
gaboon/constants/: file_data.py  vars.py
gaboon/project/: __init__.py  base_config.toml  config.py  gaboon_config.py  project.py  project_class.py
gaboon/utils/: _cli_constants.py  cli_constants.py  levenshtein.py
how-tos/: code_formatting.html  compiler_args_to_cli.html  juypter_notebooks.html  metamask_deployment.html  stateful_fuzzing.html  stateless_fuzzing.html  verify_contracts.html  vyper_subcommand.html
moccasin/: __init__.py  __main__.py  _dependency_utils.py  _error_utils.py  _sys_path_and_config_setup.py  boa_tools.py  config.py  fixture_tools.py  meta_contract.py  metamask_integration.py  moccasin_account.py  moccasin_contract.py  named_contract.py  nicknamed_contract.py  plugin.py  strategies.py  supported_verifiers.py  utils.py
moccasin/commands/: _install_utils.py  compile.py  config_.py  console.py  deploy.py  deployments.py  explorer.py  format.py  from_explorer.py  init.py  inspect.py  install.py  lint.py  msig.py  purge.py  run.py  test.py  utils.py  vyper.py  wallet.py
moccasin/config/: __init__.py  base_network.py  config.py
moccasin/constants/: chains.py  file_data.py  vars.py
profiling/: README.md  cli_profiler.py  constants.py  moccasin_profiler.py  mox_profiler.py  mox_profiling.py  mox_timeit.py
test-metamask/: index.html  main.js  server.py
tests/: base_test.py  conftest.py  constants.py
tests/data/complex_project/: .coveragerc  .gitignore  .hello  README.md  gaboon.toml  moccasin.toml  pyproject.toml  state.json
tests/data/complex_project/abis/: curve.json
tests/data/complex_project/contracts/: Auth.vy  BuyMeACoffee.vy  Counter.vy  DiffVyperVersion.vy  InitializedAuth.vy  MyTokenPyPI.vy  UninitializedAuth.vy
tests/data/complex_project/contracts/interfaces/: AggregatorV3Interface.vyi
tests/data/complex_project/contracts/mocks/: MockV3Aggregator.vy
tests/data/complex_project/script/: change_network.py  coffee_interact.py  deploy.py  deploy_and_verify.py  deploy_coffee.py  get_usdc_balance.py  quad_manifest.py  verify.py
tests/data/complex_project/script/mock_deployer/: deploy_feed.py  get_price_from_feed.py
tests/data/complex_project/src/: Counter.vy  MyToken.vy  MyTokenPyPI.vy
tests/data/complex_project/tests/: conftest.py  test_coffee.py  test_counter.py  test_fork_usdc.py  test_staging.py
tutorials/: zksync-getting-started.html
(+248 files in other folders)
