[project]
name = "gaboon"
version = "0.1.0"
description = "Pythonic smart contract development framework using Titanoboa"
authors = [
    { name = "PatrickAlphac", email = "54278053+PatrickAlphaC@users.noreply.github.com" },
    { name = "charles-cooper", email = "3867501+charles-cooper@users.noreply.github.com" },
]
dependencies = [
    "titanoboa>=0.2.2",
    "python-dotenv>=1.0.1",
    "tomli-w>=1.0.0",
    "titanoboa-zksync>=v0.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.uv]
managed = true
package = true
dev-dependencies = [
    "gaboon>=0.1",
    "pytest>=8.3.2",
    "mypy>=1.11.0",
    "snekmate>=0.1.0",
    "vyper>=0.4.0",
    "web3>=7.0.0b9",
    "ruff>=0.6.3",
]

[project.scripts]
"gab" = "gaboon:main"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0.2",
    "shibuya>=2024.8.30",
    "sphinx-argparse>=0.5.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-multiversion>=0.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gaboon"]

[tool.mypy]
disable_error_code = 'type-arg, attr-defined'
ignore_missing_imports = true
exclude = [
    'tests/',            # Excludes all files in the tests directory
    '(^|/)test_.*\.py$', # Excludes files that start with test_
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/data/"
